<resources>
    <string name="app_name">NPC Generator</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="caracteristica">Característica</string>
    <string name="ideal">Ideal</string>
    <string name="defecto">Defecto</string>
    <string name="lazo">Lazo</string>
    <string name="razaPj">Raza</string>
    <string name="sexoPj">Sexo</string>
    <string name="generarPersonaje">¡Generar Personaje!</string>
    <string-array name="selectorRaza">
        <item>Genérico</item>
        <item>Dracónicos</item>
        <item>Elfos</item>
        <item>Enanos</item>
        <item>Gnomos</item>
        <item>Humanos</item>
        <item>Medianos</item>
        <item>Semiorcos</item>
        <item>Tieflings</item>
    </string-array>
    <string-array name="selectorSexo">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

</resources>
