<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.klaussius.npcgenerator.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/nombre" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/caracteristica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCaracteristicaInfo"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCaracteristica"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/ideal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvIdealInfo"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvIdeal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/defecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDefectoInfo"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDefecto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/lazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLazoInfo"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLazo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTipoPersonajeInfo"
            android:text="@string/tipoPj"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spTipoPersonaje"
            android:layout_marginTop="15dp" />

        <Button
            android:text="@string/generarPersonaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btGenerarPersonaje"
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_marginTop="15dp" />

    </LinearLayout>

</RelativeLayout>
